--- a/index.css
+++ b/index.css
@@ -1,19 +1,21 @@
 * {
     margin: 0;
     padding: 0;
+    border: none;
     box-sizing: border-box;
+    font-family: "Crimson Text", serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 145%;
+    color: rgb(75, 81, 93);
 }
 
 body {
-    font-family: "Crimson Text", serif;
-    font-size: 20px;
-    line-height: 1.6;
-    color: rgb(75, 81, 93);
+    /*background-color: rgb(253, 253, 254);*/
     background-color: rgb(245, 250, 245);
-    margin: 50px 0;
+    margin: 50px 0px;
     min-width: 300px;
 }
-
 
 h1, h2, h3, h4 {
     font-family: "Open Sans", sans-serif;
@@ -33,18 +35,16 @@ h1.italicized_h1 {
 }
 
 h2 {
-    font-size: 36px;
+    font-size: 30px;
     font-weight: 600;
-    margin: 60px 0 10px 0;
+    margin: 60px 0px 10px 0px;
 }
 
 h2.italicized_h2 {
     font-style: italic;
     font-family: serif;
     text-align: center;
-    font-size: 42px;   /* Titolo principale grande */
 }
-
 
 h3 {
     font-size: 24px;
@@ -117,9 +117,10 @@ p {
 }
 
 .section {
+    margin-bottom: 100px;
     width: 90%;
-    max-width: 900px;
-    margin: 0 auto 80px auto;
+    margin: auto;
+    max-width: 860px;
 }
 
 .toc > li {
@@ -158,17 +159,16 @@ p {
     bottom: 0px;
 }
 
-.labeled-audio {
-    width: 260px;
-    text-align: center;
+.labeled-audio > p {
+    margin: 10px 0px 2px;
 }
 
 .playlist {
     display: flex;
-    justify-content: center;
-    gap: 30px;
-    margin: 15px 0 40px 0;
-    flex-wrap: wrap; /* Su mobile vanno sotto */
+    width: 100%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 10px 40px 0px 0px;
 }
 
 .playlist-title {
@@ -181,11 +181,10 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 40px 0;
+  height: 410px; /* Set the desired height */
 }
 
 .image-container img {
   max-width: 100%;
-  height: auto;
+  max-height: 100%;
 }
-
